--- a/devwidgets/news/config.json
+++ b/devwidgets/news/config.json
@@ -9,5 +9,5 @@
     },
     "personalportal":true,
     "groupsdashboard":true,
-    "url":"/devwidgets/news/news.html",
+    "url":"/devwidgets/news/news.html"
 }
